general file set up
html with anticipated divs, css with appropriate layouts for easier js testing, js with a few anticipated factory names

--- a/index.html
+++ b/index.html
@@ -4,11 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Tic-Tac-Toe</title>
 </head>
 <body>
-    
+    <div class="page-container">
+        <header>
+            <h1>Tic-Tac-Toe</h1>
+            <h3>Get three in a row to win!</h3>
+        </header>
 
-    <script src="main.js"></script>
+        <div class="game-container">
+            <div class="game-array" id="box1"></div>
+            <div class="game-array" id="box2"></div>
+            <div class="game-array" id="box3"></div>
+            <div class="game-array" id="box4"></div>
+            <div class="game-array" id="box5"></div>
+            <div class="game-array" id="box6"></div>
+            <div class="game-array" id="box7"></div>
+            <div class="game-array" id="box8"></div>
+            <div class="game-array" id="box9"></div>
+        </div>
+
+        <div class="player-container">
+            <p id="player-one"></p>
+            <p id="player-two"></p>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
