players constructor and gameboard module

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         </div>
 
         <div class="player-container">
-            <p id="player-one"></p>
-            <p id="player-two"></p>
+            <p id="player-one">Player X</p>
+            <p id="player-two">Player O</p>
         </div>
     </div>
 
