returned to general outline js

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         </div>
 
         <div class="player-container">
-            <p id="player-one">Player X</p>
-            <p id="player-two">Player O</p>
+            <p id="player-one">Player X's Turn</p>
+            <p id="player-two">Player O's Turn</p>
         </div>
     </div>
 
