unable to double click game divs, working on msgs
trying to find a way to get the message display to show which player's turn it is

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
         </div>
 
         <div class="player-container">
-            <p id="player-one">Player X's Turn</p>
-            <p id="player-two">Player O's Turn</p>
+            <p id="player-msg"></p>
         </div>
     </div>
 
