--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
         </div>
 
         <div class="player-container">
-            <p id="player-msg"></p>
+            <p id="player-msg">Player X Goes First.</p>
+            <p id="winner-msg"></p>
+        </div>
+
+        <div class="reset">
+            <button type="button" id="reset-btn">Reset</button>
         </div>
     </div>
 
