--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
         </header>
 
         <div class="game-container">
-            <div class="game-array" id="box1"></div>
-            <div class="game-array" id="box2"></div>
-            <div class="game-array" id="box3"></div>
-            <div class="game-array" id="box4"></div>
-            <div class="game-array" id="box5"></div>
-            <div class="game-array" id="box6"></div>
-            <div class="game-array" id="box7"></div>
-            <div class="game-array" id="box8"></div>
-            <div class="game-array" id="box9"></div>
+            <div class="game-array" data-index="0"></div>
+            <div class="game-array" data-index="1"></div>
+            <div class="game-array" data-index="2"></div>
+            <div class="game-array" data-index="3"></div>
+            <div class="game-array" data-index="4"></div>
+            <div class="game-array" data-index="5"></div>
+            <div class="game-array" data-index="6"></div>
+            <div class="game-array" data-index="7"></div>
+            <div class="game-array" data-index="8"></div>
         </div>
 
         <div class="player-container">
