--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <div class="page-container">
         <header>
             <h1>Tic-Tac-Toe</h1>
-            <h3>Get three in a row to win!</h3>
         </header>
 
         <div class="game-container">
@@ -34,6 +33,11 @@
         <div class="reset">
             <button type="button" id="reset-btn">Reset</button>
         </div>
+
+        <footer>
+            <p>Katy Nightshade 2022</p>
+            <a href="https://github.com/katynightshade/tic-tac-toe">GitHub</a>
+        </footer>
     </div>
 
     <script src="script.js"></script>
