--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         </header>
 
         <div class="game-container">
-            <div class="game-array" data-index="0"></div>
-            <div class="game-array" data-index="1"></div>
-            <div class="game-array" data-index="2"></div>
-            <div class="game-array" data-index="3"></div>
-            <div class="game-array" data-index="4"></div>
-            <div class="game-array" data-index="5"></div>
-            <div class="game-array" data-index="6"></div>
-            <div class="game-array" data-index="7"></div>
-            <div class="game-array" data-index="8"></div>
+            <div class="game-array" id="0"></div>
+            <div class="game-array" id="1"></div>
+            <div class="game-array" id="2"></div>
+            <div class="game-array" id="3"></div>
+            <div class="game-array" id="4"></div>
+            <div class="game-array" id="5"></div>
+            <div class="game-array" id="6"></div>
+            <div class="game-array" id="7"></div>
+            <div class="game-array" id="8"></div>
         </div>
 
         <div class="player-container">
