final formatting complete

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
         </div>
 
         <footer>
-            <p>Katy Nightshade 2022</p>
-            <a href="https://github.com/katynightshade/tic-tac-toe">GitHub</a>
+            <a href="https://github.com/katynightshade/tic-tac-toe"><img src="img/github.png" alt="GitHub"></a>
         </footer>
     </div>
 
